# raytracinginonesemester

./: README.md
EAW_MC_Denoiser/: README.md  cornellboxnoisy.exr  eaw.cu
HW1/: CMakeLists.txt
HW1/config/: cuboid.json  frog.json  sphere.json
HW1/include/: material.h  raytracer.h  scene_loader.h  transform.h
HW1/src/: render.cpp  scene_loader.cpp  stage_preview.cpp
MC-RayTracer/: .gitignore  CMakeLists.txt  README.md
MC-RayTracer/assets/grass/bermuda/: grass_bermuda_01_4k.blend
MC-RayTracer/assets/grass/obj_plane/: grass.mtl
MC-RayTracer/assets/json_files/: cornell_area_light.json  cornell_fog.json  cornell_hallway_fog.json  cornell_smoke_embergen_100.json  cornell_smoke_embergen_120.json  cornell_smoke_embergen_20.json  cornell_smoke_embergen_47.json  cornell_smoke_embergen_47_density_15_spp512.json  cornell_smoke_embergen_47_density_30_spp512.json  cornell_smoke_embergen_47_density_8_spp512.json  cornell_smoke_embergen_47_emission_32_spp512.json  cornell_smoke_embergen_47_emission_8_spp512.json  cornell_smoke_embergen_47_g_0_spp512.json  cornell_smoke_embergen_47_g_neg05_spp512.json  cornell_smoke_embergen_47_g_pos05_spp512.json  cornell_smoke_taichi.json  cornell_volume_g0.json  cornell_volume_gm09.json  cornell_volume_gp09.json  cornell_volume_raw.json  dartmouth_vol_g0_t05.json  dartmouth_vol_g0_t1.json  dartmouth_vol_gm05_t1.json  dartmouth_vol_gp05_t1.json  grass_scene1_2_obj.json  grass_scene1_ground.json  grass_scene2_billboard.json  grass_scene3_blades.json  grass_scene4_lod.json  old_main.json  old_main_dense_fog.json  old_main_light_fog.json  old_main_realistic_fog.json  old_main_smoke.json
MC-RayTracer/assets/meshes/: Meshy_AI_Old_Main_0326041611_texture.mtl  old_main.mtl
MC-RayTracer/assets/volumes/: fog_blob_32_u8.raw
MC-RayTracer/include/: MeshOBJ.h  antialias.h  brdf.h  material.h  medium.h  query.cu  query.h  scene.h  shader.h  stb_image.h  texture.h  vec2.h  vec3.h  volume_common.h
MC-RayTracer/scripts/: blender_fit_vdb.py  convert_vdb_to_raw.py  gen_grass_billboard_texture.py  gen_grass_billboards.py  gen_grass_blades.py  gen_grass_lod.py  generate_cornell_smoke.py  visualize_raw_volume.py  visualize_raw_volume_3d.py
MC-RayTracer/src/: main.cu
RayTracer/GPUandCPU/: AGENTS.md  CMakeLists.txt  README.md  run_render_experiments.py
RayTracer/GPUandCPU/assets/json_files/: cornell_area_light.json  mis_comparison.json  old_main.json  sphere_single.json
RayTracer/GPUandCPU/assets/textures/: old_main.mtl
RayTracer/GPUandCPU/include/: MeshOBJ.h  antialias.h  brdf.h  material.h  query.cu  query.h  scene.h  shader.h  texture.h
RayTracer/GPUandCPU/src/: main.cu
